Update Kiểm tra ký tự đầu tiên của chuỗi có phải là chữ hoa không.html

--- a/Kiểm tra ký tự đầu tiên của chuỗi có phải là chữ hoa không.html
+++ b/Kiểm tra ký tự đầu tiên của chuỗi có phải là chữ hoa không.html
@@ -5,19 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script>
-    function upperCase(str) {
-        str = prompt("nhập 1 chuỗi kí tự");
-        regexp = /^[A-Z]/;
-        if (regexp.test(str)) {
-            alert("String's first character is uppercase");
-        } else {
-            alert("String's first character is not uppercase");
-        }
-    }
-
-
-</script>
-<button type="button" onclick="upperCase()">start</button>
+<script src="Validate%20email.js"></script>
+<button type="button" onclick="email()">check email</button>
 </body>
 </html>
